version/0.13/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.WildcardPath.rst.txt
ansys.fluent.core.solver.flobject.WildcardPath
==============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: WildcardPath

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~WildcardPath.__init__
      ~WildcardPath.get_active_child_names
      ~WildcardPath.get_active_command_names
      ~WildcardPath.get_active_query_names
      ~WildcardPath.get_attr
      ~WildcardPath.get_attrs
      ~WildcardPath.get_completer_info
      ~WildcardPath.get_state
      ~WildcardPath.is_active
      ~WildcardPath.is_read_only
      ~WildcardPath.print_state
      ~WildcardPath.set_flproxy
      ~WildcardPath.set_state
      ~WildcardPath.to_python_keys
      ~WildcardPath.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~WildcardPath.child_names
      ~WildcardPath.command_names
      ~WildcardPath.flproxy
      ~WildcardPath.fluent_name
      ~WildcardPath.obj_name
      ~WildcardPath.parent
      ~WildcardPath.path
      ~WildcardPath.query_names
   
   